--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         // Konfigurasi Google Sheets - GANTI DENGAN MILIK ANDA
-        const SPREADSHEET_ID = 'env.YOUR_SPREADSHEET_ID'; // Ganti dengan ID spreadsheet Anda
-        const API_KEY = 'env.YOUR_API_KEY'; // Ganti dengan API key Anda
+        const SPREADSHEET_ID = 'YOUR_SPREADSHEET_ID'; // Ganti dengan ID spreadsheet Anda
+        const API_KEY = 'YOUR_API_KEY'; // Ganti dengan API key Anda
         
         // Nama worksheet - HARUS SAMA DENGAN BOT WHATSAPP
         const LIST_SO_SHEET = 'List_so';
