--- a/public/index.html
+++ b/public/index.html
@@ -282,7 +282,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         // Konfigurasi - URL Worker yang benar
-        const WORKER_URL = 'https://so-rawan-website.pages.dev';
+        const WORKER_URL = 'https://so-rawan-website.saefullah695.workers.dev';
         
         // Nama worksheet - HARUS SAMA DENGAN BOT WHATSAPP
         const LIST_SO_SHEET = 'List_so';
